# dbt-dashboard-as-code

./: .gitignore  LICENSE  README.md  pyproject.toml
cli/: main.py  params.py
dbt/: .user.yml  dbt_project.yml  package-lock.yml  profiles.yml
dbt/metabase_builder/: core.py  dbt_utils.py
dbt/metabase_builder/metabase/: hooks.py  models.py
dbt/models/metabase/cards/: test.yml
dbt/models/metabase/cards/binning/: order_total_by_count_items_bin_default.yml  order_total_by_count_items_bin_num.yml  order_total_by_count_items_bin_width.yml
dbt/models/metabase/cards/date_temporal_unit/: order_total_by_location_and_month.yml
dbt/models/metabase/cards/order_by/: order_total_location_food_table.yml  sankey_location_food_breakdown.yml
dbt/models/metabase/queries/: metabase_orders.sql
metabase_builder/: core.py  dbt_utils.py
metabase_builder/metabase/: definitions.py  hooks.py  metabase.py  models.py
